# oscar-core

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/oscarcrab/: __init__.py  config.yaml  core.py  llm.py
test/: test_core.py  test_llm.py
